--- a/basics-03-events-starting-code/index.html
+++ b/basics-03-events-starting-code/index.html
@@ -18,8 +18,9 @@
     </header>
     <section id="events">
       <h2>Events in Action</h2>
-      <button v-on:click.right="add(5)">Add</button>
+      <button v-on:click="add(10)">Add</button>
       <button v-on:click="reduce(5)">Remove</button>
+      <p v-once>Starting Counter: {{ counter }}</p>
       <p>Results: {{ counter }}</p>
       <!-- <input type="text" v-model="name" > -->
       <input type="text" v-on:input="setName($event, 'Llanos')" v-on:keyup.enter="confirmInput" >
